--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "jest": "^28.1.2",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "winston": "^3.8.1"
   }
 }
