--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "csv-stringify": "^6.2.0",
     "dotenv": "^16.0.1",
     "jest": "^28.1.2",
     "nodemon": "^2.0.19",
