--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "csv-stringify": "^6.2.0",
     "dotenv": "^16.0.1",
+    "inquirer": "^9.1.0",
     "jest": "^28.1.2",
     "nodemon": "^2.0.19",
+    "readline": "^1.3.0",
     "winston": "^3.8.1"
   }
 }
